[package]
name = 'wtp-downloader'
version = '0.1.0'
authors = ['Michael Mestnik <cheako+github_com@mikemestnik.net>']
edition = '2018'

[dependencies]
futures = '0.3'
structopt = '0.3'
tokio-serial = '4.3'
tokio-compat-02 = '0.2'
quicli = '0.4'

[dependencies.tokio]
version = '1.0'
features = [
    'fs',
    'io-std',
    'io-util',
    'macros',
    'rt-multi-thread',
]

[dependencies.rexpect]
path = '../rust-libs/rexpect'
features = ['tokio']

[dependencies.tokio-util]
version = '0.6'
features = ['io']
